--- a/.travis.yml
+++ b/.travis.yml
@@ -45,4 +45,12 @@ matrix:
   - jdk: openjdk11
     # See https://github.com/travis-ci/travis-ci/issues/8667
     install: true
-    script: mvn clean install
+    before_script:
+      - "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
+    script:
+      # your build scripts before running `fossa`
+      # NOTE: before running `fossa` make sure to save your FOSSA_API_KEY in your
+      # environment variable in Travis see below.
+      - fossa init
+      - fossa analyze
+      - mvn clean install
