--- a/.fossa.yml
+++ b/.fossa.yml
@@ -5,7 +5,7 @@ version: 2
 cli:
   server: https://app.fossa.com
   fetcher: custom
-  project: https://github.com/IncPlusPlus/bigtoolbox
+  project: git+github.com/IncPlusPlus/bigtoolbox
 analyze:
   modules:
   - name: Big Tool Box
