Added cobertura execution and upload to .travis.yml
Signed-off-by: Ryan Cloherty <rcloherty@rocketsoftware.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,9 @@ matrix:
   - jdk: oraclejdk11
     script: "./gradlew clean build"
   - jdk: oraclejdk11
-    script: mvn clean install
+    script: mvn clean install cobertura:cobertura
+    after_success:
+      - bash <(curl -s https://codecov.io/bash)
     before_deploy:
       - tree
     deploy:
