--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
   - jdk: oraclejdk11
     script: "./gradlew clean build"
   - jdk: oraclejdk11
-    script: mvn clean install cobertura:cobertura
+    script: mvn clean install
     after_success:
       - bash <(curl -s https://codecov.io/bash)
     before_deploy:
