Added javadoc aggregation for parent pom
Signed-off-by: Ryan Cloherty <rcloherty@rocketsoftware.com>

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,50 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.1.1</version>
+                <!-- workaround for https://bugs.openjdk.java.net/browse/JDK-8212233 -->
+                <configuration>
+                    <!--                    <source>8</source>-->
+                    <finalName>${project.artifactId}-${project.version}</finalName>
+<!--                    <includeDependencySources>true</includeDependencySources>-->
+                    <jarOutputDirectory>${project.basedir}/target</jarOutputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>aggregate-javadocs</id>
+                        <goals>
+                            <goal>aggregate-jar</goal>
+                        </goals>
+<!--                        <configuration>-->
+<!--                            <includeDependencySources>true</includeDependencySources>-->
+<!--                        </configuration>-->
+                    </execution>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>resource-bundles</id>
+                        <phase>package</phase>
+                        <goals>
+                            <!-- produce source artifact for main project sources -->
+                            <goal>resource-bundle</goal>
+
+                            <!-- produce source artifact for project test sources -->
+                            <goal>test-resource-bundle</goal>
+                        </goals>
+                        <configuration>
+                            <detectOfflineLinks>false</detectOfflineLinks>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
             </plugin>
