Added self explanatory comment
Signed-off-by: Ryan Cloherty <rcloherty@rocketsoftware.com>

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
                             <goal>jar</goal>
                         </goals>
                     </execution>
+<!--                    This execution may no longer be necessary -->
                     <execution>
                         <id>resource-bundles</id>
                         <phase>package</phase>
