--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,9 @@ matrix:
     # See https://github.com/travis-ci/travis-ci/issues/8667
     install: true
     script:
-    - mvn clean install
+    - mvn clean jacoco:prepare-agent install jacoco:report
+    after_success:
+      - bash <(curl -s https://codecov.io/bash)
     deploy:
     - provider: bintray
       file: bintray_info_maven.JSON
