--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: xenial
 language: java
 cache:
   directories:
-    - $HOME/.m2
+    - $HOME/.m2/repository
 env:
 - CLI_VERSION=latest
 addons:
