--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
       - bash <(curl -s https://codecov.io/bash)
     deploy:
     - provider: script
-      script: "mvn deploy -Dregistry=https://maven.pkg.github.com/IncPlusPlus -Dtoken=$GH_TOKEN"
+      script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
       skip_cleanup: true
       on:
         repo: IncPlusPlus/bigtoolbox
