--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git://github.com/IncPlusPlus/bigtoolbox.git</connection>
-        <developerConnection>scm:git:ssh://github.com:IncPlusPlus/bigtoolbox.git</developerConnection>
-        <url>https://github.com/IncPlusPlus/bigtoolbox/tree/master</url>
+        <connection>scm:git:https://github.com/IncPlusPlus/bigtoolbox.git</connection>
+        <developerConnection>scm:git:https://github.com/IncPlusPlus/bigtoolbox.git</developerConnection>
+        <url>https://github.com/IncPlusPlus/bigtoolbox</url>
     </scm>
 
     <modules>
