--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
+                <configuration>
+                    <file>${project.build.directory}/${project.artifactId}-${project.version}.jar</file>
+                    <javadoc>${project.build.directory}/${project.artifactId}-${project.version}-javadoc.jar</javadoc>
+                    <sources>${project.build.directory}/${project.artifactId}-${project.version}-sources.jar</sources>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
