--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
       - bash <(curl -s https://codecov.io/bash)
     deploy:
     - provider: script
-      script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy -e"
+      script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy:deploy-file -e"
       skip_cleanup: true
       on:
         repo: IncPlusPlus/bigtoolbox
