--- a/math/pom.xml
+++ b/math/pom.xml
@@ -12,6 +12,11 @@
     <name>Big Tool Box: Math</name>
     <version>1.0.58</version>
     <packaging>jar</packaging>
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
 
     <build>
         <finalName>math</finalName>
@@ -61,9 +66,5 @@
             <version>2.0.1</version>
         </dependency>
     </dependencies>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
 
 </project>
