--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,7 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
                 <configuration>
-                    <file>${project.build.directory}/${project.artifactId}-${project.version}.jar</file>
+                    <files>${project.build.directory}/${project.artifactId}-${project.version}.jar</files>
                 </configuration>
             </plugin>
             <plugin>
