--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -11,6 +11,9 @@
     <artifactId>assembly</artifactId>
     <packaging>pom</packaging>
     <name>Big Tool Box Assembler</name>
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
 
     <build>
         <plugins>
