Try adding scm section to assembly
Maybe that'll make GH Registry not send a 400 back

Signed-off-by: Ryan Cloherty <rcloherty@rocketsoftware.com>

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -12,6 +12,12 @@
     <packaging>pom</packaging>
     <name>Big Tool Box Assembler</name>
 
+    <scm>
+        <connection>scm:git:https://github.com/IncPlusPlus/bigtoolbox.git</connection>
+        <developerConnection>scm:git:https://github.com/IncPlusPlus/bigtoolbox.git</developerConnection>
+        <url>https://github.com/IncPlusPlus/bigtoolbox</url>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
