Did a whole bunch of stuff (see commit message)
I'm going to split this project up into discrete modules. Assembly will instead be "bigtoolbox-all" and the regular bigtoolbox POM will become "bigtoolbox-parent".

Signed-off-by: Ryan Cloherty <rcloherty@rocketsoftware.com>

--- a/math/pom.xml
+++ b/math/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>io.github.incplusplus</groupId>
         <artifactId>bigtoolbox</artifactId>
-        <version>1.0.62</version>
+        <version>1.0.95</version>
     </parent>
     <artifactId>math</artifactId>
     <name>Big Tool Box: Math</name>
-    <version>1.0.62</version>
+    <version>1.0.95</version>
     <packaging>jar</packaging>
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
@@ -19,7 +19,7 @@
     </properties>
 
     <build>
-        <finalName>math</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
