--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.incplusplus</groupId>
     <artifactId>bigtoolbox</artifactId>
-    <version>1.0.62</version>
+    <version>1.0.95</version>
     <packaging>pom</packaging>
     <name>Big Tool Box</name>
     <description>A collection of tools for varying purposes.</description>
@@ -19,6 +19,7 @@
         <bintray.package>bigtoolbox</bintray.package>
         <bintray.subject>incplusplus</bintray.subject>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <GH_REGISTRY_TOKEN>${env.GH_REGISTRY_TOKEN}</GH_REGISTRY_TOKEN>
     </properties>
 
     <licenses>
@@ -53,38 +54,38 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.1.1</version>
-                <!-- workaround for https://bugs.openjdk.java.net/browse/JDK-8212233 -->
-                <configuration>
-                    <!--                    <source>8</source>-->
-                    <!-- The below specified attribute 'attach' will disable the javadoc.jar not included in the artifact list -->
-                    <attach>false</attach>
-                    <finalName>${project.artifactId}-${project.version}</finalName>
-<!--                    <includeDependencySources>true</includeDependencySources>-->
-                    <jarOutputDirectory>${project.basedir}/target</jarOutputDirectory>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>aggregate-javadocs</id>
-                        <goals>
-                            <goal>aggregate-jar</goal>
-                        </goals>
-<!--                        <configuration>-->
-<!--                            <includeDependencySources>true</includeDependencySources>-->
-<!--                        </configuration>-->
-                    </execution>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
+<!--                <version>3.1.1</version>-->
+<!--                &lt;!&ndash; workaround for https://bugs.openjdk.java.net/browse/JDK-8212233 &ndash;&gt;-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash;                    <source>8</source>&ndash;&gt;-->
+<!--                    &lt;!&ndash; The below specified attribute 'attach' will disable the javadoc.jar not included in the artifact list &ndash;&gt;-->
+<!--                    <attach>false</attach>-->
+<!--                    <finalName>${project.artifactId}-${project.version}</finalName>-->
+<!--&lt;!&ndash;                    <includeDependencySources>true</includeDependencySources>&ndash;&gt;-->
+<!--                    <jarOutputDirectory>${project.basedir}/target</jarOutputDirectory>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>aggregate-javadocs</id>-->
+<!--                        <goals>-->
+<!--                            <goal>aggregate-jar</goal>-->
+<!--                        </goals>-->
+<!--&lt;!&ndash;                        <configuration>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <includeDependencySources>true</includeDependencySources>&ndash;&gt;-->
+<!--&lt;!&ndash;                        </configuration>&ndash;&gt;-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>attach-javadocs</id>-->
+<!--                        <phase>package</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>jar</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -95,49 +96,55 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.22.0</version>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>3.0.0-M1</version>
-                <executions>
-                    <execution>
-                        <id>generate-pom</id>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <configuration>
-                            <generatePom>true</generatePom>
-                            <javadoc>bigtoolbox/target/${project.artifactId}-${project.version}-javadoc.jar</javadoc>
-                            <sources>bigtoolbox/target/${project.artifactId}-${project.version}-sources.jar</sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.7</version>
-                <executions>
-                    <execution>
-                        <id>copy-resource-one</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-install-plugin</artifactId>-->
+<!--                <version>3.0.0-M1</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>generate-pom</id>-->
+<!--                        <goals>-->
+<!--                            <goal>install-file</goal>-->
+<!--                        </goals>-->
+<!--                        <phase>install</phase>-->
+<!--                        <configuration>-->
+<!--&lt;!&ndash;                            <generatePom>true</generatePom>&ndash;&gt;-->
+<!--                            <packaging>jar</packaging>-->
+<!--                            <artifactId>${project.artifactId}</artifactId>-->
+<!--                            <groupId>${project.groupId}</groupId>-->
+<!--                            <version>${project.version}</version>-->
+<!--                            <file>${project.build.directory}/${project.artifactId}-${project.version}.jar</file>-->
+<!--&lt;!&ndash;                            <javadoc>${project.build.directory}/${project.artifactId}-${project.version}-javadoc.jar</javadoc>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <sources>${project.build.directory}/${project.artifactId}-${project.version}-sources.jar</sources>&ndash;&gt;-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <artifactId>maven-resources-plugin</artifactId>-->
+<!--                <version>2.7</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>copy-resource-one</id>-->
+<!--                        <phase>install</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>copy-resources</goal>-->
+<!--                        </goals>-->
 
-                        <configuration>
-                            <outputDirectory>${basedir}/target</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${settings.localRepository}/io/github/incplusplus/bigtoolbox/${project.version}</directory>
-                                    <includes>
-                                        <include>*.pom</include>
-                                    </includes>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--                        <configuration>-->
+<!--                            <outputDirectory>${basedir}/target</outputDirectory>-->
+<!--                            <resources>-->
+<!--                                <resource>-->
+<!--                                    <directory>${settings.localRepository}/io/github/incplusplus/bigtoolbox/${project.version}</directory>-->
+<!--                                    <includes>-->
+<!--                                        <include>*.pom</include>-->
+<!--                                    </includes>-->
+<!--                                </resource>-->
+<!--                            </resources>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -192,29 +199,30 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
                 <configuration>
+<!--                    <skip>false</skip>-->
                     <files>${project.build.directory}/${project.artifactId}-${project.version}.jar</files>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.4</version>
-                <executions>
-                    <execution>
-                        <id>jacoco-initialize</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>jacoco-site</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.jacoco</groupId>-->
+<!--                <artifactId>jacoco-maven-plugin</artifactId>-->
+<!--                <version>0.8.4</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>jacoco-initialize</id>-->
+<!--                        <goals>-->
+<!--                            <goal>prepare-agent</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>jacoco-site</id>-->
+<!--                        <phase>package</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>report</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
