--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,14 +4,12 @@ on: repository_dispatch
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+        echo ${github.event}
+        echo done!!!
