--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,5 +11,5 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-        echo ${github.event.type}
+        echo ${github.event_name}
         echo done!!!
