--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,10 +6,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - name: Explain why this job ran
+      uses: monacorp/action-name@master
+      with:
+        entrypoint: /bin/echo
+        args: The ${{ github.event_name }} event triggered this step.
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-        echo github.event_name
+        echo ${{github.event_name}}
         echo done!!!
