--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,5 +10,5 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-        echo ${{github.event_name}}
+        echo ${{github.event}}
         echo done!!!
