--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,4 +13,8 @@ jobs:
         echo ${{github.event}}
         echo ${{github.event_type}}
         echo ${{github.event.action}}
+        echo ${{github.event.ref}}
+        echo ${{github.event.repository}}
+        echo ${{github.event.repository.full_name}}
+        echo ${{github.event.url}}
         echo done!!!
