--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,8 +13,9 @@ jobs:
         echo ${{github.event}}
         echo ${{github.event_type}}
         echo ${{github.event.action}}
+        echo ${{github.event.repository.ref}}
         echo ${{github.event.ref}}
         echo ${{github.event.repository}}
         echo ${{github.event.repository.full_name}}
-        echo ${{github.event.url}}
+        echo ${{github.event.repository.url}}
         echo done!!!
