--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ jobs:
         echo Add other actions to build,
         echo test, and deploy your project.
         echo ${{github.event}}
-        echo ${{github.event_type}}
+        echo ${{github.event_name}}
         echo ${{github.event.action}}
         echo ${{github.event.repository.ref}}
         echo ${{github.event.ref}}
