Don't worry about assembly
We're getting rid of it soon

Signed-off-by: Ryan Cloherty <rcloherty@rocketsoftware.com>

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -44,29 +44,29 @@
 <!--                    </execution>-->
 <!--                </executions>-->
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.1</version>
-                <executions>
-                    <execution>
-                        <id>go-framework-assemby</id>
-                        <phase>package
-                        </phase><!-- create assembly in package phase (invoke 'single' goal on assemby plugin)-->
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <finalName>${project.parent.artifactId}-${project.version}</finalName>
-                            <descriptors>
-                                <descriptor>bin.xml</descriptor>
-                            </descriptors>
-                            <appendAssemblyId>false</appendAssemblyId>
-                            <outputDirectory>../target</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-assembly-plugin</artifactId>-->
+<!--                <version>3.1.1</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>go-framework-assemby</id>-->
+<!--                        <phase>package-->
+<!--                        </phase>&lt;!&ndash; create assembly in package phase (invoke 'single' goal on assemby plugin)&ndash;&gt;-->
+<!--                        <goals>-->
+<!--                            <goal>single</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <finalName>${project.parent.artifactId}-${project.version}</finalName>-->
+<!--                            <descriptors>-->
+<!--                                <descriptor>bin.xml</descriptor>-->
+<!--                            </descriptors>-->
+<!--                            <appendAssemblyId>false</appendAssemblyId>-->
+<!--                            <outputDirectory>../target</outputDirectory>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
 <!--            <plugin>-->
 <!--                <groupId>org.apache.maven.plugins</groupId>-->
 <!--                <artifactId>maven-jar-plugin</artifactId>-->
@@ -78,30 +78,30 @@
 <!--                </archive>-->
 <!--                </configuration>-->
 <!--            </plugin>-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>3.0.0-M1</version>
-                <executions>
-                    <execution>
-                        <id>attach-main-jar</id>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <phase>install</phase>
-                        <configuration>
-<!--                            <generatePom>true</generatePom>-->
-                            <packaging>jar</packaging>
-                            <artifactId>${project.parent.artifactId}</artifactId>
-                            <groupId>${project.parent.groupId}</groupId>
-                            <version>${project.parent.version}</version>
-                            <file>${project.parent.build.directory}/${project.parent.artifactId}-${project.parent.version}.jar</file>
-<!--                            <javadoc>${project.parent.build.directory}/${project.parent.artifactId}-${project.parent.version}-javadoc.jar</javadoc>-->
-                            <sources>${project.parent.build.directory}/${project.parent.artifactId}-${project.parent.version}-sources.jar</sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-install-plugin</artifactId>-->
+<!--                <version>3.0.0-M1</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>attach-main-jar</id>-->
+<!--                        <goals>-->
+<!--                            <goal>install-file</goal>-->
+<!--                        </goals>-->
+<!--                        <phase>install</phase>-->
+<!--                        <configuration>-->
+<!--&lt;!&ndash;                            <generatePom>true</generatePom>&ndash;&gt;-->
+<!--                            <packaging>jar</packaging>-->
+<!--                            <artifactId>${project.parent.artifactId}</artifactId>-->
+<!--                            <groupId>${project.parent.groupId}</groupId>-->
+<!--                            <version>${project.parent.version}</version>-->
+<!--                            <file>${project.parent.build.directory}/${project.parent.artifactId}-${project.parent.version}.jar</file>-->
+<!--&lt;!&ndash;                            <javadoc>${project.parent.build.directory}/${project.parent.artifactId}-${project.parent.version}-javadoc.jar</javadoc>&ndash;&gt;-->
+<!--                            <sources>${project.parent.build.directory}/${project.parent.artifactId}-${project.parent.version}-sources.jar</sources>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
 <!--            <plugin>-->
 <!--                <groupId>org.apache.maven.plugins</groupId>-->
 <!--                <artifactId>maven-shade-plugin</artifactId>-->
