--- a/.fossa.yml
+++ b/.fossa.yml
@@ -5,38 +5,10 @@ version: 2
 cli:
   server: https://app.fossa.com
   fetcher: custom
-  project: git+github.com/IncPlusPlus/bigtoolbox
+  project: https://github.com/IncPlusPlus/bigtoolbox.git
 analyze:
   modules:
   - name: Big Tool Box
     type: mvn
     target: pom.xml
     path: .
-  - name: 'Big Tool Box: IO'
-    type: mvn
-    target: pom.xml
-    path: io
-  - name: 'Big Tool Box: Math'
-    type: mvn
-    target: pom.xml
-    path: math
-  - name: 'Big Tool Box: Network'
-    type: mvn
-    target: pom.xml
-    path: network
-  - name: 'Big Tool Box: OS'
-    type: mvn
-    target: pom.xml
-    path: os
-  - name: Big Tool Box Assembler
-    type: mvn
-    target: pom.xml
-    path: assembly
-  - name: JavaInterop
-    type: nuget
-    target: JavaInterop.csproj
-    path: network\src\main\dotnet\WinWiFi\JavaInterop
-  - name: SimpleWifi
-    type: nuget
-    target: SimpleWifi.csproj
-    path: network\src\main\dotnet\WinWiFi\SimpleWifi
