--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
     # See https://github.com/travis-ci/travis-ci/issues/8667
     install: true
     script:
-    - mvn clean jacoco:prepare-agent install jacoco:report
+    - mvn clean install
     after_success:
       - bash <(curl -s https://codecov.io/bash)
     deploy:
