Stop creating reduced POM
Signed-off-by: Ryan Cloherty <rcloherty@rocketsoftware.com>

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
               <finalName>${project.artifactId}-${project.version}</finalName>
               <shadedArtifactAttached>false</shadedArtifactAttached>
               <createSourcesJar>true</createSourcesJar>
+              <createDependencyReducedPom>false</createDependencyReducedPom>
             </configuration>
           </execution>
         </executions>
