Attempt to restrict Travis deploys
Try to restrict Travis GH deploy to just tagged commits

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ matrix:
       on:
         repo: IncPlusPlus/bigtoolbox
         branch: master
+        tags: true
   - jdk: openjdk11
     # See https://github.com/travis-ci/travis-ci/issues/8667
     install: true
