--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ matrix:
       file_glob: true
       file: target/bigtoolbox-*.*.*.jar
       skip_cleanup: true
+      prerelease: true
       on:
         repo: IncPlusPlus/bigtoolbox
         branch: master
