Quiet down JavaDoc creation
Signed-off-by: Ryan Cloherty <rcloherty@rocketsoftware.com>

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,9 @@
             <goals>
               <goal>jar</goal>
             </goals>
+            <configuration>
+              <quiet>true</quiet>
+            </configuration>
             <phase>package</phase>
           </execution>
         </executions>
