--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -6,15 +6,24 @@ categories:
     labels:
       - 'feature'
       - 'enhancement'
-  - title: '🐛 Bug Fixes'
+  - title: '🐞 Bug Fixes'
     labels:
       - 'fix'
       - 'bugfix'
       - 'bug'
+  - title: '🐛 Security Vuln. Fixes'
+    label: 'security vulnerability'
+  - title: '🛠 Improvements'
+    label: '🛠 Improvement'
+  - title: '📖 Documentation'
+    label: '📖 Docs'
+  - title: '📚 Dependencies'
+    label: 'dependencies'
   - title: '🧰 Maintenance'
     label: 'chore'
+    
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 template: |
-  ## Changes
-
   $CHANGES
+  ***
+  For full changes, see the [comparison between $PREVIOUS_TAG and v$NEXT_MINOR_VERSION](https://github.com/IncPlusPlus/bigtoolbox/compare/$PREVIOUS_TAG...v$NEXT_MINOR_VERSION)
