--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,6 +1,8 @@
 name-template: 'v$NEXT_PATCH_VERSION'
 tag-template: 'v$NEXT_PATCH_VERSION'
-branches: master, develop
+branches:
+  - master
+  - develop
 categories:
   - title: '🚀 Features'
     labels:
