--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
-name-template: 'v$NEXT_PATCH_VERSION'
-tag-template: 'v$NEXT_PATCH_VERSION'
+name-template: '$NEXT_PATCH_VERSION'
+tag-template: '$NEXT_PATCH_VERSION'
 branches:
   - master
   - develop
@@ -28,4 +28,4 @@ change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 template: |
   $CHANGES
   ***
-  For full changes, see the [comparison between $PREVIOUS_TAG and v$NEXT_MINOR_VERSION](https://github.com/IncPlusPlus/bigtoolbox/compare/$PREVIOUS_TAG...v$NEXT_MINOR_VERSION)
+  For full changes, see the [comparison between $PREVIOUS_TAG and $NEXT_MINOR_VERSION](https://github.com/IncPlusPlus/bigtoolbox/compare/$PREVIOUS_TAG...$NEXT_MINOR_VERSION)
