Added exclusion case
This will be useful for cases when we're just keeping master or develop up to speed with each other.

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -3,6 +3,8 @@ tag-template: '$NEXT_PATCH_VERSION'
 branches:
   - master
   - develop
+exclude-labels:
+  - 'skip-changelog'
 categories:
   - title: '🚀 Features'
     labels:
