--- a/.github/pr-branch-labeler.yml
+++ b/.github/pr-branch-labeler.yml
@@ -1,8 +1,4 @@
 # Add a label for release-drafter to ignore this commit as it is probably just being used to get master/develop up to speed with the other
 skip-changelog:
-  head: "master"
-  base: "develop"
-# Add a label for release-drafter to ignore this commit as it is probably just being used to get master/develop up to speed with the other
-skip-changelog:
-  head: "develop"
-  base: "master"
+  head: "master||develop"
+  base: "develop||master"
