--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -21,7 +21,7 @@ categories:
     label: 'security vulnerability'
   - title: '🛠 Improvements'
     label: '🛠 Improvement'
-  - title: '📖 Documentation'
+  - title: '📖 Documentation Changes'
     label: '📖 Docs'
   - title: '📚 Dependencies'
     label: 'dependencies'
