--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -14,6 +14,7 @@ categories:
       - 'enhancement'
   - title: '🐞 Bug Fixes'
     labels:
+      - 'hack'
       - 'fix'
       - 'bugfix'
       - 'bug'
