Added additional whitesource tag
Signed-off-by: Ryan Cloherty <rcloherty@rocketsoftware.com>

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -19,7 +19,9 @@ categories:
       - 'bugfix'
       - 'bug'
   - title: '🐛 Security Vuln. Fixes'
-    label: 'security vulnerability'
+    labels:
+      - 'security vulnerability'
+      - 'security fix'
   - title: '🛠 Improvements'
     label: '🛠 Improvement'
   - title: '📖 Documentation Changes'
