Try adding tags to make it not complain

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,23 @@
             <configuration>
               <quiet>true</quiet>
               <includeDependencySources>true</includeDependencySources>
+              <tags>
+                <tag>
+                  <name>apiNote</name>
+                  <placement>a</placement>
+                  <head>API Note:</head>
+                </tag>
+                <tag>
+                  <name>implSpec</name>
+                  <placement>a</placement>
+                  <head>Implementation Requirements:</head>
+                </tag>
+                <tag>
+                  <name>implNote</name>
+                  <placement>a</placement>
+                  <head>Implementation Note:</head>
+                </tag>
+              </tags>
             </configuration>
           </execution>
           <execution>
